<resources>
    <string name="app_name">Floating Action Button</string>
    <string name="recyclerview_fab_example">RecyclerView FAB example</string>
    <string name="floating_action_menu">Floating Action Menu</string>
    <string name="navigation_drawer_open">Navigation open</string>
    <string name="navigation_drawer_close">Navigation close</string>
    <string name="image_btn_add">添加照片</string>
    <string name="hint_edit">记录下坐标的信息…</string>
    <string name="radio_public">公开</string>
    <string name="radio_private">私密</string>
    <string name="radio_some">部分可见</string>
    <string name="edit_sure">确定</string>
    <string name="edit_save">保存</string>

</resources>
