<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <EditText
            android:id="@+id/edittext_editmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="false"
            android:hint="@string/hint_edit"/>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:padding="5dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/imageBtn_editmark"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:clickable="true"
            android:src="@drawable/add4"
            android:background="#ffffff"
            android:contentDescription="@string/image_btn_add" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="这里是坐标！！"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/radiogroup_editmark"
                android:clickable="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radiobtn_public"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_public"/>
                <RadioButton
                    android:id="@+id/radiobtn_private"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_private"/>
                <RadioButton
                    android:id="@+id/radiobtn_some"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_some"/>

            </RadioGroup>


            <LinearLayout
                android:id="@+id/radio_layout_some"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible">

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>